@@ -430,7 +430,6 @@ lfPCQentry_waitverify (SPHSinglePCQueue_t pqueue, SPHSinglePCQueue_t cqueue,
 		int val1, int val2, int val3)
 {
   int rc1, rc2, rc3, rc4;
-  int tv1, tv2, tv3;
   SPHLFEntryHandle_t *handle, handle0;
   int *array;
 
@@ -463,9 +462,8 @@ lfPCQentry_waitverify (SPHSinglePCQueue_t pqueue, SPHSinglePCQueue_t cqueue,
 
       if (rc1 | rc2 | rc3)
 		{
-		  printf
-			("lfPCQentry_fastverify:: SPHLFEntryGetNextInt() = %d,%d,%d should be %d,%d,%d\n",
-			 tv1, tv2, tv3, val1, val2, val3);
+		  printf ("lfPCQentry_fastverify:: SPHLFEntryGetNextInt() = %d,%d,%d should be %d,%d,%d\n",
+			 array[0], array[1], array[2], val1, val2, val3);
 		}
 
       if (SPHSinglePCQueueFreeNextEntry (cqueue))
@@ -525,7 +523,6 @@ lfPCQentry_fastverify (SPHSinglePCQueue_t pqueue, SPHSinglePCQueue_t cqueue, int
 		       int val3)
 {
   int rc1, rc2, rc3, rc4;
-  int tv1, tv2, tv3;
   SPHLFEntryHandle_t *handle, handle0;
   int *array;
 
@@ -549,7 +546,7 @@ lfPCQentry_fastverify (SPHSinglePCQueue_t pqueue, SPHSinglePCQueue_t cqueue, int
 	{
 	  printf
 	    ("lfPCQentry_fastverify:: SPHLFEntryGetNextInt() = %d,%d,%d should be %d,%d,%d\n",
-	     tv1, tv2, tv3, val1, val2, val3);
+	     array[0], array[1], array[2] ,val1, val2, val3);
 	}
 
       if (SPHSinglePCQueueFreeNextEntry (cqueue))
