@@ -1,3 +1,12 @@
+2013-03-25  Steven Munroe  <sjmunroe@us.ibm.com>
+
+	* src/sphgtod.c (sphget_tb2gtod_factor): Correct rounding of
+	timebase.
+	(__SASDebugPrint__): fix debug printf.
+	* src/sphtimer.h: Correct CLOCK_MONOTONIC to time computation.
+	* src/tests/sphsinglepcqueue_tt.c: Fix compile warnings.
+	* src/tests/sphsinglepcqueue_ttt.c: Likewise.
+
 2013-03-22  Steven Munroe  <sjmunroe@us.ibm.com>
 
 	* src/sphgtod.c: Add documentation, fix Intel issues and optimize the
